fix: Uploaded image is overflow on container because different box-sizeing calc
Is the definition of the picture contains border? Blurry requirement, I think just go for the easy fix

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,6 @@ body {
   width: 100%;
   border-radius: var(--rounded-lg);
   border: 2px solid var(--selection);
-  box-sizing: content-box;
 }
 
 .terminal {
